# AgentHub

./: .env.example  .gitignore  MANIFEST.json  README.md  package.json  pyproject.toml  start.bat  stop.bat
apps/web/: package.json
config/: agenthub.example.env  agenthub.real.example.env
docs/: acceptance-checklist.md  acceptance-matrix.md  agent-adapter-contract.md  agent-adapter-protocol.md  agent-run-design.md  agenthub-lite-migration-plan.md  ai-coding-rules.md  ai-collaboration-log.md  architecture-current.md  artifact-protocol.md  competition-alignment.md  competition-spec.md  configuration.md  context-builder.md  demo-script.md  dispatch-contract.md  execution-event-protocol.md  execution-trace.md  implementation-scope.md  known-limitations.md  legacy-macios-migration.md  local-demo-runbook.md  migration-boundary.md  module-boundary.md  no-fake-success-policy.md  orchestrator-design.md  orchestrator-reference-notes.md  permission-policy.md  product-spec.md  release-runbook.md  technical-architecture.md  turn-routing-design.md
integration/: backend-source.md  codex-next-instructions.md  frontend-source.md  runtime-dependencies.md  source-map.md
scripts/: check-api.ps1  check-layout.ps1  check-layout.sh  check-web.ps1  dev-agent-runtime.ps1  dev-agent-runtime.sh  dev-all.ps1  dev-api.ps1  dev-api.sh  dev-opencode.ps1  dev-opencode.sh  dev-web.ps1  dev-web.sh
services/: __init__.py
services/api/: __init__.py
tests/: schema_assertions.py  support.py
tests/acceptance/: test_a10_apply_patch_permission.py  test_a10_review_gate_audit.py  (+36 more)
(+142 files in other folders)
